--- a/app/src/main/res/layout/activity_user_event_view.xml
+++ b/app/src/main/res/layout/activity_user_event_view.xml
@@ -1,49 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+
+<!--TODO: Make scrollable (if needed?) -->
+<!--TODO: Figure out how to make the drawer layouts-->
+<android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_margin="6dp">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        tools:openDrawer="start">
 
-    <!-- TODO: Add the hamburger menu -->
+    <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent" android:layout_height="match_parent"
+            android:layout_margin="6dp">
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <!-- TODO: Add the hamburger menu -->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Your Events"
-            android:textStyle="bold"
-            android:textSize="20sp"/>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-        <include layout="@layout/content_user_events_attending"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hosting"
+                    android:textStyle="bold"
+                    android:textSize="20sp"/>
 
-        <TextView
+            <!--TODO: Figure out why this isn't displaying both lists of events-->
+
+            <include layout="@layout/content_user_events_attending"/>
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Attending"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+            />
+
+            <include layout="@layout/content_user_events_hosting"/>
+
+
+        </LinearLayout>
+
+        <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Your Events"
-                android:textStyle="bold"
-                android:textSize="20sp"
-        />
+                android:layout_gravity="bottom|end"
+                android:layout_margin="@dimen/fab_margin"
+                app:srcCompat="@drawable/ic_add_white_24dp"
+                android:backgroundTint="@color/fab_color"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"/>
 
-        <include layout="@layout/content_user_events_hosting"/>
+    </RelativeLayout>
 
+</android.support.v4.widget.DrawerLayout>
 
-
-    </LinearLayout>
-
-    <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@drawable/ic_add_white_24dp"
-            android:backgroundTint="@color/fab_color"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"/>
-
-</RelativeLayout>
