--- a/app/src/main/res/layout/content_user_events_attending.xml
+++ b/app/src/main/res/layout/content_user_events_attending.xml
@@ -5,7 +5,7 @@
         android:id="@+id/content_user_events_attending_recycler_view"
         android:background="@color/color_events_background_color"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_user_event_view"
