--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,6 +36,7 @@
               android:textAlignment="center"
               android:layout_marginTop="20dp"
               android:layout_marginBottom="40dp"
+              android:textColor="@android:color/white"
               android:layout_below="@+id/logo"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
