--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -5,33 +5,51 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/nav_header_height"
         android:background="@drawable/side_nav_bar"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         android:theme="@style/ThemeOverlay.AppCompat.Dark"
         android:orientation="vertical"
         android:gravity="bottom">
 
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            app:srcCompat="@mipmap/ic_launcher_round"
-            android:contentDescription="@string/nav_header_desc"
-            android:id="@+id/imageView"/>
 
-    <TextView
+    <TextView android:id="@+id/nav_main_user_name"
+              android:layout_width="match_parent"
+              android:layout_height="0dp"
+              android:layout_weight="0.8"
+              android:drawableLeft="@drawable/ic_account_circle"
+              android:drawablePadding="-150dp"
+              android:drawableStart="@drawable/ic_account_circle"
+              android:background="@drawable/color_gradient_green"
+              android:text="@string/user"
+              android:textSize="20sp"
+              android:textStyle="bold"
+              android:gravity="center"
+    />
+
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:text="@string/nav_header_title"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:background="@drawable/color_gradient_green"
+            android:backgroundTint="@android:color/darker_gray"
+            android:backgroundTintMode="multiply"
+            android:layout_weight="0.2">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/nav_header_subtitle"
-            android:id="@+id/textView"/>
+        <ImageButton
+                android:id="@+id/account_edit_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_account_edit"
+                android:layout_weight="0.5"
+        />
+
+        <ImageButton
+                android:id="@+id/sign_out_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_sign_out"
+                android:layout_weight="0.5"
+        />
+
+    </LinearLayout>
+
 
 </LinearLayout>
