--- a/app/src/main/res/layout/app_bar_event_org.xml
+++ b/app/src/main/res/layout/app_bar_event_org.xml
@@ -30,7 +30,7 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
             app:srcCompat="@drawable/ic_add_white_24dp"
-            android:background="@color/fab_color"
+            android:background="@color/colorSecondary"
             android:layout_alignParentBottom="true"
            />
 
