--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,5 +9,5 @@
         tools:showIn="@layout/activity_main"
         tools:context=".MainActivity"
         android:id="@+id/event_recycler_view"
-        android:background="@color/color_events_background_color">
+        android:background="@color/colorEventBG">
 </android.support.v7.widget.RecyclerView>
