--- a/app/src/main/res/layout/content_user_events_hosting.xml
+++ b/app/src/main/res/layout/content_user_events_hosting.xml
@@ -3,7 +3,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 android:id="@+id/user_events_hosting_recycler_view"
-android:background="@color/color_events_background_color"
+android:background="@color/colorEventBG"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:layout_marginTop="10dp"
