--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="fab_color">#AA00FF</color>
-    <color name="color_events_background_color">#fffafa</color>
-    <color name="color_event">#13A89E</color>
+    <color name="colorPrimary">#13A89E</color>
+    <color name="colorPrimaryDark">#00A79D</color>
+    <color name="colorPrimaryLight">#2BB673</color>
+    <color name="colorAccent">#00BCD4</color>
+    <color name="colorSecondary">#AA00FF</color>
+    <color name="colorEventBG">#fffafa</color>
     <color name="gradient_start">#2BB673</color>
     <color name="gradient_end">#00A79D</color>
     <color name="icon_color">#939598</color>
-
+    <color name="loginGradientStart">#13A89E</color>
+    <color name="loginGradientEnd">#6FCF97</color>
+    <color name="loginGradientMid">#27B19C</color>
 </resources>
