EventOrg Activity is functional offline.
TODO: Add Firebase stuff and sprint 2 will be prime.

--- a/app/src/main/res/layout/content_event_org.xml
+++ b/app/src/main/res/layout/content_event_org.xml
@@ -8,6 +8,6 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_event_org"
         tools:context=".MainActivity"
-        android:id="@+id/event_recycler_view"
+        android:id="@+id/event_org_recycler_view"
         android:background="@color/colorEventBG">
 </android.support.v7.widget.RecyclerView>
