--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -44,7 +44,7 @@
               android:textColor="@android:color/white"
               android:layout_below="@+id/logo"/>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:tools="http://schemas.android.com/tools"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
@@ -57,7 +57,6 @@
                   tools:context=".LoginActivity"
                   android:layout_below="@+id/title">
 
-        <!-- Login progress -->
         <ProgressBar
                 android:id="@+id/login_progress"
                 style="?android:attr/progressBarStyleLarge"
@@ -151,7 +150,9 @@
                 </LinearLayout>
 
             </LinearLayout>
-        </ScrollView>
-    </LinearLayout>
 
+        </ScrollView>
+
+    </LinearLayout>
+-->
 </RelativeLayout>
