--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,36 +3,32 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
-        <item
-                android:id="@+id/nav_user_org"
-                android:icon="@drawable/ic_account_circle"
-                android:title="@string/org_events"/>
-        <item
-                android:id="@+id/nav_gallery"
-                android:icon="@drawable/ic_menu_gallery"
-                android:title="Gallery"/>
-        <item
-                android:id="@+id/nav_slideshow"
-                android:icon="@drawable/ic_menu_slideshow"
-                android:title="Slideshow"/>
-        <item
-                android:id="@+id/nav_manage"
-                android:icon="@drawable/ic_menu_manage"
-                android:title="Tools"/>
-    </group>
+        <group android:checkableBehavior="single">
+            <item
+                    android:id="@+id/nav_hosted_events"
+                    android:icon="@drawable/ic_account_circle"
+                    android:title="@string/hosted_events"/>
+            <item
+                    android:id="@+id/nav_settings"
+                    android:icon="@drawable/ic_add_white_24dp"
+                    android:title="Settings"/>
+            <item
+                    android:id="@+id/nav_slideshow"
+                    android:icon="@drawable/ic_menu_slideshow"
+                    android:title="Slideshow"/>
+            <item
+                    android:id="@+id/nav_manage"
+                    android:icon="@drawable/ic_menu_manage"
+                    android:title="Tools"/>
 
-    <item android:title="Communicate">
-        <menu>
             <item
-                    android:id="@+id/nav_share"
+                    android:id="@+id/nav_events_attending"
                     android:icon="@drawable/ic_menu_share"
-                    android:title="Share"/>
+                    android:title="Events Attending"/>
             <item
-                    android:id="@+id/nav_send"
+                    android:id="@+id/nav_events_send"
                     android:icon="@drawable/ic_menu_send"
                     android:title="Send"/>
-        </menu>
-    </item>
+        </group>
 
 </menu>
