Some weird stuff idk man
Trying to make fragment for users and stuff like that for that uhhhhhh user swipe for event hosts and all that nonsense

That's about it :-)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="loginGradientStart">#13A89E</color>
     <color name="loginGradientEnd">#6FCF97</color>
     <color name="loginGradientMid">#27B19C</color>
+    <color name="white">#FFF</color>
 </resources>
