--- a/app/src/main/res/layout/swipe_placeholder_view.xml
+++ b/app/src/main/res/layout/swipe_placeholder_view.xml
@@ -1,30 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<com.mindorks.placeholderview.SwipePlaceHolderView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/darker_gray">
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_gravity="bottom"
-            android:gravity="center"
-            android:orientation="horizontal">
-        <ImageButton
-                android:id="@+id/rejectBtn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@android:drawable/ic_menu_close_clear_cancel"/>
-        <ImageButton
-                android:id="@+id/acceptBtn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="30dp"
-                android:background="@drawable/ic_menu_send"/>
-    </LinearLayout>
-    <com.mindorks.placeholderview.SwipePlaceHolderView
-            android:id="@+id/swipeView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-</FrameLayout>
+        android:id="@+id/cardSwipePlaceHolderView">
+
+</com.mindorks.placeholderview.SwipePlaceHolderView>
