--- a/app/src/main/res/layout/card_user_view.xml
+++ b/app/src/main/res/layout/card_user_view.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
@@ -10,7 +9,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
-            android:background="@color/white"
+            android:background="@android:color/white"
             android:orientation="vertical"
             app:cardCornerRadius="7dp"
             app:cardElevation="4dp"
