--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -27,13 +27,28 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center"
+            android:layout_marginBottom="40dp"
+            android:layout_gravity="bottom|center_horizontal"
             android:layout_margin="@dimen/fab_margin"
             app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24px"
             android:backgroundTint="@android:color/white"
             app:borderWidth="0dp"
             android:backgroundTintMode="src_atop"
 
-           />
+    />
+
+    <android.support.design.widget.BottomNavigationView
+            android:id="@+id/bottom_nav_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="0dp"
+            android:layout_marginStart="0dp"
+            android:background="?android:attr/windowBackground"
+            android:layout_gravity="bottom"
+            app:itemBackground="@color/colorPrimary"
+            app:itemIconTint="@android:color/white"
+            app:itemTextColor="@android:color/white"
+            app:menu="@menu/bottom_nav"/>
+
 
 </android.support.design.widget.CoordinatorLayout>
