--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -30,8 +30,8 @@
             android:layout_marginBottom="40dp"
             android:layout_gravity="bottom|center_horizontal"
             android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24px"
-            android:backgroundTint="@android:color/white"
+            app:srcCompat="@drawable/ic_add_white_24dp"
+            android:backgroundTint="@color/colorAccent"
             app:borderWidth="0dp"
             android:backgroundTintMode="src_atop"
 
