--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainActivity"
-             android:id="@+id/event_recycler_view"
+             android:id="@+id/main_fragment_layout"
              tools:showIn="@layout/activity_main"
              android:orientation="vertical"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
