--- a/app/src/main/res/layout/fragment_event_org.xml
+++ b/app/src/main/res/layout/fragment_event_org.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".EventOrgFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:layout_width="match_parent"
+
+    <android.support.v7.widget.RecyclerView
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_width="match_parent"
+            android:id="@+id/event_org_fragment_recycler_view"
+            android:background="@color/colorEventBG"
 
-</FrameLayout>
+    >
+    </android.support.v7.widget.RecyclerView>
