--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity"
+        android:layout_marginBottom="55dp">
 
     <android.support.design.widget.AppBarLayout
             android:layout_height="wrap_content"
@@ -27,8 +28,7 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp"
-            android:layout_gravity="bottom|center_horizontal"
+            android:layout_gravity="bottom|right"
             android:layout_margin="@dimen/fab_margin"
             app:srcCompat="@drawable/ic_add_white_24dp"
             android:backgroundTint="@color/colorAccent"
@@ -43,12 +43,12 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
             android:layout_marginStart="0dp"
+            app:layout_insetEdge="bottom"
             android:background="?android:attr/windowBackground"
             android:layout_gravity="bottom"
             app:itemBackground="@color/colorPrimary"
             app:itemIconTint="@android:color/white"
             app:itemTextColor="@android:color/white"
             app:menu="@menu/bottom_nav"/>
-
-
 </android.support.design.widget.CoordinatorLayout>
+
