--- a/app/src/main/res/layout/card_user_view.xml
+++ b/app/src/main/res/layout/card_user_view.xml
@@ -3,7 +3,9 @@
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:orientation="vertical">
+             android:orientation="vertical"
+             android:background="@color/colorEventBG"
+>
 
     <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -21,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="110dp"
-                android:scaleType="fitXY" />
+                android:scaleType="fitXY"/>
 
         <LinearLayout
                 android:layout_width="match_parent"
