--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,8 @@
              tools:showIn="@layout/activity_main"
              android:orientation="vertical"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
-             android:background="@color/colorEventBG">
+             android:background="@color/colorEventBG"
+             android:layout_marginBottom="55dp">
 
     <LinearLayout
             android:layout_width="match_parent"
