--- a/app/src/main/res/layout/add_event_dialog.xml
+++ b/app/src/main/res/layout/add_event_dialog.xml
@@ -41,4 +41,20 @@
             android:layout_height="wrap_content"
             android:inputType="textPostalAddress"
     />
+
+    <TextView
+            android:text="Picture Url"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Give a image url here!"
+            android:id="@+id/textview_picture_text"/>
+    <EditText
+            android:id="@+id/add_picture_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPostalAddress"
+    />
+
+
+
 </LinearLayout>
