--- a/app/src/main/res/layout/card_user_view.xml
+++ b/app/src/main/res/layout/card_user_view.xml
@@ -23,7 +23,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="110dp"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY"
+                android:src="@drawable/yuh"/>
 
         <LinearLayout
                 android:layout_width="match_parent"
