--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,23 +21,23 @@
 
         <ImageButton
                 android:id="@+id/rejectBtn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/ic_menu_manage"/>
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/ic_checked"/>
 
         <ImageButton
                 android:id="@+id/acceptBtn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="30dp"
-                android:background="@drawable/ic_menu_share"/>
+                android:background="@drawable/ic_reject"/>
 
         <ImageButton
                 android:id="@+id/undoBtn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="30dp"
-                android:background="@android:drawable/ic_menu_revert"/>
+                android:background="@drawable/ic_baseline_refresh_24px"/>
     </LinearLayout>
 
     <com.mindorks.placeholderview.SwipeDirectionalView
