--- a/app/src/main/res/layout/add_user_dialog.xml
+++ b/app/src/main/res/layout/add_user_dialog.xml
@@ -27,30 +27,32 @@
             android:text="Birthday"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="-10dp"
             android:layout_margin="20dp"
             android:id="@+id/user_bday_text"/>
 
     <Button android:id="@+id/select_date_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="10dp"
             android:paddingHorizontal="15dp"
             android:text="Select Date"
             android:background="@android:color/holo_blue_light"
-            android:layout_marginBottom="10dp"
     />
 
     <TextView
             android:text="Sex"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="20dp"
             android:id="@+id/user_sex"/>
     <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/sex_drop_down"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginLeft="20dp"
             android:entries="@array/sex_array"
     >
     </android.support.v7.widget.AppCompatSpinner>
