--- a/app/src/main/res/layout/card_event_swipe_view.xml
+++ b/app/src/main/res/layout/card_event_swipe_view.xml
@@ -15,7 +15,7 @@
         <ImageView
                 android:id="@+id/cardSwipeView_Image"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:scaleType="centerCrop"
                 android:src="@android:color/holo_orange_dark"
